// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Docs to markdown Exclude description should exclude type with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | Arrayof |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | Node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude description should exclude type with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | Arrayof |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | Node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude description should exclude type with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | Arrayof |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| component                         | Node    |         | false    | @internal Use another root component.                              |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude key should exclude key with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | Arrayof |         | true     |                 |
| backgroundColor                 | String  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude key should exclude key with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | Arrayof |         | true     |                 |
| backgroundColor                 | String  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude key should exclude key with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                            | Type    | Default | Required | Description     |
| ------------------------------- | ------- | ------- | -------- | --------------- |
| [items](#markdown-header-items) | Arrayof |         | true     |                 |
| backgroundColor                 | String  |         | true     | @custom-exclude |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |
"
`;

exports[`Docs to markdown Exclude type should exclude type with array 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | String |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude type should exclude type with regex 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | String |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Exclude type should exclude type with string 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type   | Default | Required | Description                                                        |
| --------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------ |
| [margin](#markdown-header-margin) | Union  | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | String |         | true     | @custom-exclude                                                    |

## Complex Props

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Cards 1`] = `
"# Cards

## Props
| Name                                          | Type    | Default | Required | Description                                                                            |
| --------------------------------------------- | ------- | ------- | -------- | -------------------------------------------------------------------------------------- |
| [itemsPerRow](#markdown-header-items-per-row) | Enum    | 3       | true     | The maximum number of items per row. In a narrow/article ribbon, set this to 2.        |
| [theme](#markdown-header-theme)               | Enum    |         | false    |                                                                                        |
| collapse                                      | Bool    | false   | false    | If \\"true\\" only the first row of cards will be displayed, until user clicks \\"show more\\" |
| showMoreLabel                                 | String  |         | false    |                                                                                        |
| showLessLabel                                 | String  |         | false    |                                                                                        |
| [items](#markdown-header-items)               | Arrayof |         | true     |                                                                                        |

## Complex Props

### itemsPerRow
Type: _Enum_

The maximum number of items per row. In a narrow/article ribbon, set this to 2.

**itemsPerRow** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| 1     | Number |
| 2     | Number |
| 3     | Number |

--------------------------------------------------------------------------------

### theme
Type: _Enum_

**theme** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| blue  | String |

--------------------------------------------------------------------------------

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                              | Type   | Required |
| --------------------------------- | ------ | -------- |
| tag                               | String | false    |
| title                             | String | false    |
| body                              | String | false    |
| [type](#markdown-header-type)     | Enum   | false    |
| [fields](#markdown-header-fields) | Union  | false    |
| [cta](#markdown-header-cta)       | Object | false    |

#### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| null    | null   |
| default | String |
| event   | String |

#### fields
Type: _Union_

##### Object

> | Name                              | Type    | Required |
> | --------------------------------- | ------- | -------- |
> | date                              | String  | true     |
> | location                          | String  | true     |
> | [prices](#markdown-header-prices) | Arrayof | false    |
> 
> ###### prices
> Type: _Arrayof_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | label | String | true     |
> | value | String | true     |
> 


#### cta
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | false    |
| target | String | false    |
"
`;

exports[`Docs to markdown Should handle various input should convert CaseList 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | Arrayof |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | String  |         | true     | @custom-exclude                                                    |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Flow 1`] = `
"# Flow

General component description.


## Props
| Name                                                    | Type   | Default | Required | Description                |
| ------------------------------------------------------- | ------ | ------- | -------- | -------------------------- |
| primitive                                               | Number |         | true     | Description of prop \\"foo\\". |
| [literalsAndUnion](#markdown-header-literals-and-union) | Union  |         | true     | Description of prop \\"bar\\". |
| arr                                                     | Array  |         | true     |                            |
| [func](#markdown-header-func)                           | Object |         | false    |                            |
| [obj](#markdown-header-obj)                             | Object |         | false    |                            |

## Complex Props

### func
Type: _Object_
signature
--------------------------------------------------------------------------------

### obj
Type: _Object_
signature"
`;

exports[`Docs to markdown Should handle various input should convert Hero 1`] = `
"# Hero

## Props
| Name                                     | Type   | Default | Required | Description                                                                                                   |
| ---------------------------------------- | ------ | ------- | -------- | ------------------------------------------------------------------------------------------------------------- |
| tag                                      | String |         | false    | The \\"tag\\" the small label rendered in the lower corner                                                        |
| headline                                 | String |         | true     | The overall page title                                                                                        |
| [content](#markdown-header-content)      | Union  |         | true     | Content can be a paragraph, or an array of paragraphs                                                         |
| cta                                      | CTA    |         | false    | Add a button with a CTA below the content                                                                     |
| [goBack](#markdown-header-go-back)       | Object |         | false    | The back link to render, to return the user to an overview page                                               |
| [share](#markdown-header-share)          | Object |         | false    | Share widget props, if the Hero should render a Share widget                                                  |
| [margin](#markdown-header-margin)        | Enum   |         | false    | Remove the margin between hero and section by setting it to none. Used if the following ribbon has no pattern |
| [pattern](#markdown-header-pattern)      | Enum   |         | false    | Use a Pattern instead of the theme                                                                            |
| [mediaType](#markdown-header-media-type) | Enum   |         | false    | Type of the media                                                                                             |
| [media](#markdown-header-media)          | Union  |         | false    | The Media object should match the related mediaType                                                           |
| [cardType](#markdown-header-card-type)   | Enum   |         | false    | Type of the card                                                                                              |
| [card](#markdown-header-card)            | Union  |         | false    | The Media object should match the related cardType                                                            |
| title                                    | String |         | false    |                                                                                                               |

## Complex Props

### content
Type: _Union_

Content can be a paragraph, or an array of paragraphs

**content** should be one of the following types:

#### String
string


#### Arrayof
string


--------------------------------------------------------------------------------

### goBack
Type: _Object_

The back link to render, to return the user to an overview page

**goBack** is an object with:

| Name  | Type   | Required |
| ----- | ------ | -------- |
| label | String | true     |
| href  | String | true     |

--------------------------------------------------------------------------------

### share
Type: _Object_

Share widget props, if the Hero should render a Share widget

**share** is an object with:

| Name                                               | Type    | Required |
| -------------------------------------------------- | ------- | -------- |
| saveLabel                                          | String  | false    |
| savedLabel                                         | String  | false    |
| shareLabel                                         | String  | false    |
| saveApi                                            | String  | false    |
| [socialNetworks](#markdown-header-social-networks) | Arrayof | false    |
| pageUrl                                            | String  | false    |

#### socialNetworks
Type: _Arrayof_

Social networks to allow sharing from

| Value    | Type   |
| -------- | ------ |
| twitter  | String |
| facebook | String |
| linkedin | String |

--------------------------------------------------------------------------------

### margin
Type: _Enum_

Remove the margin between hero and section by setting it to none. Used if the following ribbon has no pattern

**margin** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| none  | String |
| null  | null   |

--------------------------------------------------------------------------------

### pattern
Type: _Enum_

Use a Pattern instead of the theme

**pattern** should be one of the following values:

| Value   | Type   |
| ------- | ------ |
| stripes | String |
| dots    | String |
| waves   | String |

--------------------------------------------------------------------------------

### mediaType
Type: _Enum_

Type of the media

**mediaType** should be one of the following values:

| Value | Type   |
| ----- | ------ |
| image | String |
| video | String |

--------------------------------------------------------------------------------

### media
Type: _Union_

The Media object should match the related mediaType

**media** should be one of the following types:

#### Object

> | Name   | Type   | Required |
> | ------ | ------ | -------- |
> | src    | String | true     |
> | height | Number | true     |
> | width  | Number | true     |
> 


#### Object

> | Name | Type   | Required |
> | ---- | ------ | -------- |
> | src  | String | true     |
> 


--------------------------------------------------------------------------------

### cardType
Type: _Enum_

Type of the card

**cardType** should be one of the following values:

| Value    | Type   |
| -------- | ------ |
| download | String |
| event    | String |
| contact  | String |

--------------------------------------------------------------------------------

### card
Type: _Union_

The Media object should match the related cardType

**card** should be one of the following types:

#### Object

> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | name                            | String | true     |
> | description                     | String | false    |
> | [image](#markdown-header-image) | Object | false    |
> | buttonLabel                     | String | true     |
> | href                            | String | true     |
> 
> ##### image
> Type: _Object_
> 
> | Name   | Type   | Required |
> | ------ | ------ | -------- |
> | src    | String | true     |
> | height | Number | true     |
> | width  | Number | true     |
> 


#### Object

> | Name                              | Type    | Required |
> | --------------------------------- | ------- | -------- |
> | tag                               | String  | false    |
> | title                             | String  | false    |
> | body                              | String  | false    |
> | cta                               | CTA     | false    |
> | date                              | String  | false    |
> | location                          | String  | false    |
> | [prices](#markdown-header-prices) | Arrayof | false    |
> 
> ##### prices
> Type: _Arrayof_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | label | String | true     |
> | value | String | true     |
> 


#### Object

> | Name                                  | Type    | Required |
> | ------------------------------------- | ------- | -------- |
> | introduction                          | String  | false    |
> | highlight                             | String  | false    |
> | [hotline](#markdown-header-hotline)   | Object  | false    |
> | [contacts](#markdown-header-contacts) | Arrayof | false    |
> 
> ##### hotline
> Type: _Object_
> 
> Render a hotline card
> 
> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | title                           | String | true     |
> | text                            | String | false    |
> | [phone](#markdown-header-phone) | Object | false    |
> | [email](#markdown-header-email) | Object | false    |
> | simple                          | Bool   | false    |
> 
> ###### phone
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | String | false    |
> | label | String | false    |
> 
> ###### email
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | String | false    |
> | label | String | false    |
> 
> ##### contacts
> Type: _Arrayof_
> 
> Contact persons to render
> 
> | Name                            | Type   | Required |
> | ------------------------------- | ------ | -------- |
> | name                            | String | true     |
> | jobTitle                        | String | false    |
> | department                      | String | false    |
> | [image](#markdown-header-image) | Object | false    |
> | [phone](#markdown-header-phone) | Object | false    |
> | [email](#markdown-header-email) | Object | false    |
> | cta                             | CTA    | false    |
> 
> ###### image
> Type: _Object_
> 
> | Name | Type   | Required |
> | ---- | ------ | -------- |
> | src  | String | false    |
> 
> ###### phone
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | String | false    |
> | label | String | false    |
> 
> ###### email
> Type: _Object_
> 
> | Name  | Type   | Required |
> | ----- | ------ | -------- |
> | href  | String | false    |
> | label | String | false    |
> 

"
`;

exports[`Docs to markdown Should handle various input should convert Image 1`] = `
"# Image

Image handles fetching the correct Imgix image, and rendering it onto the page.
By default it will load an image that fills the width of it's container, while keeping the original image aspect ratio


## Props
| Name                               | Type   | Default | Required | Description                                                                                                                   |
| ---------------------------------- | ------ | ------- | -------- | ----------------------------------------------------------------------------------------------------------------------------- |
| children                           | Node   |         | false    |                                                                                                                               |
| src                                | String |         | true     | Image src URL                                                                                                                 |
| height                             | Number |         | true     | Original image height                                                                                                         |
| width                              | Number |         | true     | Original image width                                                                                                          |
| alt                                | String |         | false    | Image alt text                                                                                                                |
| contain                            | Bool   | false   | false    | Contain the image inside the area, instead of cropping                                                                        |
| [alignX](#markdown-header-align-x) | Enum   |         | false    | Align the image on X axis, default to center in the browser                                                                   |
| [alignY](#markdown-header-align-y) | Enum   |         | false    | Align the image on Y axis, default to center in the browser                                                                   |
| [crop](#markdown-header-crop)      | Enum   | 'faces' | false    | The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop                                            |
| padded                             | Bool   | false   | false    | Add padding around the image - use with \\"contain\\" to create a padded area around the image, so it doesn't extend to the edge. |
| fill                               | Bool   | false   | false    | Fill the container element. On mobile it will revert to aspect ratio                                                          |
| mobileFill                         | Bool   | false   | false    | Also apply the fill on mobile devices.                                                                                        |
| mobileWidthScale                   | Number |         | false    | On mobile, scale the width of the aspect ratio with this - Use to crop the width                                              |
| maxAspectRatio                     | Number | 2       | false    | The maximum aspect ratio to use after (height / width) - Adds some sanity to editor images, to ensure they are not too tall.  |
| imgixParams                        | Object |         | false    | Any custom Imgix params                                                                                                       |
| imageProps                         | Object |         | false    | Extra tags to pass as img HTML attributes                                                                                     |
| fadeIn                             | Bool   | false   | false    | Fade in the image when it's loaded. Creates a nice effect with the blurred image                                              |
| disableBlur                        | Bool   | false   | false    | Disable the blurred placeholder shown until size is ready. Will instead show a spinner                                        |

## Complex Props

### alignX
Type: _Enum_

Align the image on X axis, default to center in the browser

**alignX** should be one of the following values:

| Value  | Type   |
| ------ | ------ |
| left   | String |
| right  | String |
| center | String |

--------------------------------------------------------------------------------

### alignY
Type: _Enum_

Align the image on Y axis, default to center in the browser

**alignY** should be one of the following values:

| Value  | Type   |
| ------ | ------ |
| top    | String |
| bottom | String |
| center | String |

--------------------------------------------------------------------------------

### crop
Type: _Enum_

The method used when cropping the image: https://docs.imgix.com/apis/url/size/crop

**crop** should be one of the following values:

| Value   | Type   |
| ------- | ------ |
| faces   | String |
| entropy | String |
| edges   | String |
| top     | String |
| bottom  | String |
| left    | String |
| right   | String |
| \\"\\"      | Object |
| null    | null   |
"
`;

exports[`Docs to markdown Should handle various input should convert TextArea 1`] = `
"# TextArea

## Props
| Name     | Type   | Default                               | Required | Description |
| -------- | ------ | ------------------------------------- | -------- | ----------- |
| debounce | Object | {<br>  blur: 0,<br>  change: 500<br>} | false    |             |
| updateOn | String | 'blur change'                         | false    |             |
| value    | String |                                       | false    |             |
| onBlur   | Func   | () => {}                              | false    |             |
"
`;

exports[`Docs to markdown should convert caselist 1`] = `
"# CaseList

Overview of all the components


## Props
| Name                              | Type    | Default | Required | Description                                                        |
| --------------------------------- | ------- | ------- | -------- | ------------------------------------------------------------------ |
| [items](#markdown-header-items)   | Arrayof |         | true     |                                                                    |
| [margin](#markdown-header-margin) | Union   | 'small' | false    | Margin can be either a string, or an object with top/bottom margin |
| backgroundColor                   | String  |         | true     | @custom-exclude                                                    |

## Complex Props

### items
Type: _Arrayof_

**items** is an array of the following type:

| Name                                | Type   | Required |
| ----------------------------------- | ------ | -------- |
| className                           | String | false    |
| backgroundColor                     | String | false    |
| backgroundImage                     | String | false    |
| color                               | String | false    |
| fullWidth                           | Bool   | false    |
| category                            | String | false    |
| title                               | String | true     |
| body                                | String | false    |
| [link](#markdown-header-link)       | Object | true     |
| [preview](#markdown-header-preview) | Object | false    |

#### link
Type: _Object_

| Name   | Type   | Required |
| ------ | ------ | -------- |
| href   | String | true     |
| target | String | false    |

#### preview
Type: _Object_

| Name                          | Type   | Required |
| ----------------------------- | ------ | -------- |
| image                         | String | true     |
| [type](#markdown-header-type) | Enum   | true     |

##### type
Type: _Enum_

| Value   | Type   |
| ------- | ------ |
| iphone  | String |
| ipad    | String |
| desktop | String |
| dual    | String |

--------------------------------------------------------------------------------

### margin
Type: _Union_

Margin can be either a string, or an object with top/bottom margin

**margin** should be one of the following types:

#### Object

> | Name                              | Type | Required |
> | --------------------------------- | ---- | -------- |
> | [top](#markdown-header-top)       | Enum | false    |
> | [bottom](#markdown-header-bottom) | Enum | false    |
> 
> ##### top
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 
> ##### bottom
> Type: _Enum_
> 
> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 


#### Enum

> | Value | Type   |
> | ----- | ------ |
> | none  | String |
> | small | String |
> | large | String |
> 

"
`;

exports[`Docs to markdown should handle no props 1`] = `
"# CaseList

Short description

## No props"
`;
